tests/fails/f47.t
require("fail")

terra foo()
  goto a
end
foo()
